Replace better-sqlite3 with native bun:sqlite

--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "locker-bun",
   "module": "index.ts",
-  "type": "module",
-  "private": true,
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/bun": "latest"
@@ -10,7 +8,6 @@
   "peerDependencies": {
     "typescript": "^5"
   },
-  "dependencies": {
-    "better-sqlite3": "^12.2.0"
-  }
+  "private": true,
+  "type": "module"
 }
